2011-06-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSOutlineView.m: Implement left arrow key moving selection
	to parent node when the current item is collapsed.

2011-06-29 15:41 David Chisnall <theraven@gna.org>

	* libs/gui/trunk/Source/GSTextStorage.m,
	  libs/gui/trunk/Source/NSBitmapImageRep.m: Small GC fixups. Make
	  sure that we're actually using GC-tracked memory when we think
	  that we are.

2011-06-29 15:39 David Chisnall <theraven@gna.org>

	* libs/gui/trunk/Headers/AppKit/NSEvent.h,
	  libs/gui/trunk/Headers/AppKit/NSMatrix.h: Fix AppKit headers to
	  allow inclusion in ARC mode. Since ARC requires the non-fragile
	  ABI, a better solution would be to simply not expose any of these
	  ivars with the non-fragile ABI.

2011-06-28  Eric Wasylishen  <ewasylishen@gmail.com>
	
	* Headers/Additions/GNUstepGUI/GSImageMagickImageRep.h:
	* Source/GNUmakefile:
	* Source/NSImageRep.m:
	* Source/GSImageMagickImageRep.m:
	* configure.ac: New ImageMagick-based NSBitmapImageRep subclass

2011-06-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSDragView.m (-init): Set the window background colour to clear.
	* Headers/AppKit/NSAffineTransform.h,
	* Headers/AppKit/NSView.h,
	* Source/NSAffineTransform.m,
	* Source/NSPrintOperation.m,
	* Source/NSView.m: Use CGFlaot instead of float.
	* Tests/gui/NSView/NSView_bounds_scale.m: New test file that
	currently fails.

2011-06-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSGhostscriptImageRep.m:
	* Headers/Additions/GNUstepGUI/GSGhostscriptImageRep.h:
	* Source/GNUmakefile:
	* Source/NSImageRep.m: New image rep which attempts to
	invoke Ghostscript to rasterize PS/EPS/PDF images. It needs
	some polishing but basically works.

2011-06-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView_actions.m (-deleteToEndOfParagraph:):
	Implement method, which was introduced in OS X 10.3.

2011-06-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView_actions.m (-deleteToEndOfLine:): Fix